--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
 
   <body class="page">
     <header class="header">
       <button class="button create-event-btn">
-        <i class="fas fa-plus create-event-btn__icon"></i>Create
+        <i class="fas fa-plus create-event-btn__icon"></i>Создать
       </button>
       <div class="navigation">
         <button data-direction="today" class="navigation__today-btn button">
